--- a/build.gradle
+++ b/build.gradle
@@ -13,10 +13,15 @@ dependencies {
     testCompile group: 'junit', name: 'junit', version: '4.12'
 
     compile 'com.google.guava:guava:19.0'
-    compile 'edu.mit:jwi:2.4.0'
+    compile group: 'edu.mit', name: 'jwi', version: '2.2.3'
     compile 'nz.ac.waikato.cms.weka:weka-stable:3.8.1'
     compile 'org.apache.commons:commons-math3:3.4'
     compile 'commons-lang:commons-lang:2.6'
     compile 'com.beust:jcommander:1.72'
     compile 'edu.stanford.nlp:stanford-corenlp:3.8.0'
+
+    compile project(':google-ngrams-to-mysql')
+    compile project(':datamuse-java')
+    compile project(':text-util')
+    compile project(':generator-util')
 }
